--- a/config/wordrive.conf
+++ b/config/wordrive.conf
@@ -5,3 +5,12 @@ server {
         proxy_pass http://127.0.0.1:8080/;
     }
 }
+
+server {
+    listen 80;
+    server_name wordapi.localhost;
+    location / {
+        add_header Access-Control-Allow-Origin *;
+        proxy_pass http://127.0.0.1:3000/;
+    }
+}
